--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Header Logo</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Header Link One</a></li>
+                    <li><a href="#">Header Link Two</a></li>
+                    <li><a href="#">Header Link Three</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+  <div class="container 1">
+    <h1>This website is awesome</h1>
+    <h4>This is a very usefull and amazing website</h4>
+    <img src="https://cdn.pixabay.com/photo/2024/02/09/23/02/trees-8563877_1280.jpg" alt="Website Logo" class="logo">
+    <button id="button1">Sign Up</button>
+  </div>
+</body>
+</html>
