--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <div class="container">
+            <img src="https://via.placeholder.com/50" alt="Website Logo" class="logo">
             <h1>Header Logo</h1>
             <nav>
                 <ul>
@@ -17,10 +18,12 @@
                     <li><a href="#">Header Link Three</a></li>
                 </ul>
             </nav>
+        </div>
+        <div class="header-content">
             <h1>This website is awesome</h1>
-    <h4>This is a very usefull and amazing website</h4>
-    <img src="https://cdn.pixabay.com/photo/2024/02/09/23/02/trees-8563877_1280.jpg" alt="Website Logo" class="logo">
-    <button id="button1">Sign Up</button>
+            <h4>This is a very useful and amazing website</h4>
+            <img src="https://cdn.pixabay.com/photo/2024/02/09/23/02/trees-8563877_1280.jpg" alt="Website Image" class="header-image">
+            <button id="button1">Sign Up</button>
         </div>
     </header>
 </body>
